<resources>
    <string name="app_name">Schedulo</string>
    <string name="input_pass">Password</string>
    <string name="input_num">Phone Number</string>
    <string name="button_login">Log In</string>
    <string name="input_name">Name</string>
    <string name="button_register">Register</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="button_addevent">Add Event</string>
    <string name="button_logout">Log Out</string>
    <string name="button_deleteevent">Delete Event</string>
    <string name="button_updateevent">Update Event</string>
    <string name="eventname_prompt">Name</string>
    <string name="eventlocation_prompt">Location</string>
    <string name="eventstart_prompt">From</string>
    <string name="eventend_prompt">To</string>
    <string name="eventdescription_prompt">Description</string>
    <string name="date_hint">mm/dd/yyyy</string>
    <string name="time_hint">hh:mm</string>
    <string name="toggle_am">AM</string>
    <string name="toggle_pm">PM</string>
    <string name="back">Back</string>
    <string name="action_settings">Test</string>
    <string name="server_url">http://10.0.2.2:7000/login</string>
    <string name="button_send">Share Event</string>
    <string name="recipient_prompt">To</string>
    <string name="recipient_hint">user1, user2, etc.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
