<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCalendarEvent">

    <EditText
        android:id="@+id/eventNameBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eventNamePrompt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventNamePrompt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eventname_prompt"
        app:layout_constraintBaseline_toBaselineOf="@id/eventNameBox"
        app:layout_constraintEnd_toStartOf="@+id/eventNameBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eventLocationBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventLocationPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventNameBox" />

    <TextView
        android:id="@+id/eventLocationPrompt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eventlocation_prompt"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventLocationBox"
        app:layout_constraintEnd_toStartOf="@+id/eventLocationBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eventStartDateBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eventStartPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventLocationBox" />

    <TextView
        android:id="@+id/eventStartPrompt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eventstart_prompt"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventStartDateBox"
        app:layout_constraintEnd_toStartOf="@+id/eventStartDateBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eventStartTimeBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/toggleButtonStart"
        app:layout_constraintStart_toEndOf="@+id/eventStartPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventStartDateBox" />

    <EditText
        android:id="@+id/eventEndDateBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventEndPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventStartTimeBox" />

    <TextView
        android:id="@+id/eventEndPrompt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eventend_prompt"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventEndDateBox"
        app:layout_constraintEnd_toStartOf="@+id/eventEndDateBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eventEndTimeBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/toggleButtonEnd"
        app:layout_constraintStart_toEndOf="@+id/eventEndPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventEndDateBox" />

    <EditText
        android:id="@+id/eventDescriptionBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventDescriptionPrompt"
        app:layout_constraintTop_toBottomOf="@+id/eventEndTimeBox" />

    <TextView
        android:id="@+id/eventDescriptionPrompt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eventdescription_prompt"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventDescriptionBox"
        app:layout_constraintEnd_toStartOf="@+id/eventDescriptionBox"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:onClick="addEvent"
        android:text="@string/button_addevent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionBox" />

    <ToggleButton
        android:id="@+id/toggleButtonEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textOff="@string/toggle_am"
        android:textOn="@string/toggle_pm"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventEndTimeBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventEndTimeBox" />

    <ToggleButton
        android:id="@+id/toggleButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textOff="@string/toggle_am"
        android:textOn="@string/toggle_pm"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventStartTimeBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventStartTimeBox" />
</androidx.constraintlayout.widget.ConstraintLayout>